@@ -5,3 +5,14 @@ enablePlugins(SbtPlugin)
 scriptedLaunchOpts ++= Seq("-Dplugin.version=" + version.value)
 
 scriptedBufferLog := false
+
+// TODO: Remove those when plugin is added to itself
+Keys.testOptions in Test += Tests.Argument("-oD")
+Keys.javaOptions in Test ++= Seq(
+  "-Xms512M",
+  "-Xmx2048M",
+  "-XX:MaxPermSize=2048M",
+  "-XX:+CMSClassUnloadingEnabled"
+)
+Keys.parallelExecution in Test := false
+Keys.fork in Test              := true
